when applied this commit will inish the HTML structure of the wireframe lab

--- a/index.html
+++ b/index.html
@@ -26,9 +26,18 @@
             <img src="https://placehold.it/300x375/ddd"/>
             <img src="https://placehold.it/300x375/ddd"/>
         </div>
-        <section>
-            
+        <div id="featured banner">
+        <img src="https://placehold.it/480x225/ddd"/>
+        </div>
+        <section id="content">
+            <h6>Featured Section Heading</h6>
+            <p>
+                Lorem ipsum dolor sit, amet consectetur adipisicing elit. Dolorem a voluptate, ipsam doloribus eaque provident culpa quae cum impedit natus consequatur perspiciatis perferendis amet voluptates sed? Amet ipsa placeat asperiores? Lorem ipsum dolor sit, amet consectetur adipisicing elit. Dolorem a voluptate, ipsam doloribus eaque provident culpa quae cum impedit natus consequatur perspiciatis perferendis amet voluptates sed? Amet ipsa placeat asperiores?Lorem ipsum dolor sit, amet consectetur adipisicing elit. Dolorem a voluptate, ipsam doloribus eaque provident culpa quae cum impedit natus consequatur perspiciatis perferendis amet voluptates sed? Amet ipsa placeat asperiores?
+            </p>
         </section>
+        <div id="button">
+            <button>Call To Action</button>
+        </div>
     </header>
 </body>
 </html>
