--- a/index.html
+++ b/index.html
@@ -10,8 +10,8 @@
         <div id="logo">
             <img src="https://placehold.it/200x70/ddd"/>
         </div>
-        <div id="Navigation">
-            <ul>
+        <div>
+            <ul id="navigation">
                 <li>Nav item 1</li>
                 <li>Nav item 2</li>
                 <li>Nav item 3</li>
